// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`c-alarm-metric-aggregate-function-field Renders \`c-alarm-metric-aggregate-function-field\` with custom props 1`] = `
<div
  class="v-input mt-0 v-input--selection-controls v-input--radio-group v-input--radio-group--column v-input--is-label-active v-input--is-dirty theme--light"
  hidedetails="true"
>
  <div
    class="v-input__control"
  >
    <div
      class="v-input__slot"
      style="height: auto;"
    >
      <div
        class="v-input--radio-group__input"
        role="radiogroup"
      >
        <label
          aria-hidden="true"
          class="v-label theme--light"
          style="left: 0px; position: relative;"
        >
          Custom label
        </label>
        <div
          class="v-radio theme--light"
        >
          <div
            class="v-input--selection-controls__input"
          >
            <input
              aria-checked="false"
              aria-label="Average"
              name="custom_name"
              role="radio"
              type="radio"
              value="avg"
            />
            <div
              class="v-input--selection-controls__ripple"
            />
            <i
              aria-hidden="true"
              class="v-icon material-icons theme--light"
            >
              radio_button_unchecked
            </i>
          </div>
          <label
            aria-hidden="true"
            class="v-label theme--light"
            style="left: 0px; position: relative;"
          >
            Average
          </label>
        </div>
        <div
          class="v-radio theme--light"
        >
          <div
            class="v-input--selection-controls__input"
          >
            <input
              aria-checked="false"
              aria-label="Sum"
              name="custom_name"
              role="radio"
              type="radio"
              value="sum"
            />
            <div
              class="v-input--selection-controls__ripple"
            />
            <i
              aria-hidden="true"
              class="v-icon material-icons theme--light"
            >
              radio_button_unchecked
            </i>
          </div>
          <label
            aria-hidden="true"
            class="v-label theme--light"
            style="left: 0px; position: relative;"
          >
            Sum
          </label>
        </div>
        <div
          class="v-radio theme--light"
        >
          <div
            class="v-input--selection-controls__input"
          >
            <input
              aria-checked="false"
              aria-label="Min"
              name="custom_name"
              role="radio"
              type="radio"
              value="min"
            />
            <div
              class="v-input--selection-controls__ripple"
            />
            <i
              aria-hidden="true"
              class="v-icon material-icons theme--light"
            >
              radio_button_unchecked
            </i>
          </div>
          <label
            aria-hidden="true"
            class="v-label theme--light"
            style="left: 0px; position: relative;"
          >
            Min
          </label>
        </div>
      </div>
    </div>
    <div
      class="v-messages theme--light"
    >
      <transition-group-stub
        class="v-messages__wrapper"
        name="message-transition"
        tag="div"
      />
    </div>
  </div>
</div>
`;

exports[`c-alarm-metric-aggregate-function-field Renders \`c-alarm-metric-aggregate-function-field\` with default props 1`] = `
<div
  class="v-input mt-0 v-input--selection-controls v-input--radio-group v-input--radio-group--column theme--light"
>
  <div
    class="v-input__control"
  >
    <div
      class="v-input__slot"
      style="height: auto;"
    >
      <div
        class="v-input--radio-group__input"
        role="radiogroup"
      >
        <div
          class="v-radio theme--light"
        >
          <div
            class="v-input--selection-controls__input"
          >
            <input
              aria-checked="false"
              aria-label="Sum"
              name="aggregate_func"
              role="radio"
              type="radio"
              value="sum"
            />
            <div
              class="v-input--selection-controls__ripple"
            />
            <i
              aria-hidden="true"
              class="v-icon material-icons theme--light"
            >
              radio_button_unchecked
            </i>
          </div>
          <label
            aria-hidden="true"
            class="v-label theme--light"
            style="left: 0px; position: relative;"
          >
            Sum
          </label>
        </div>
        <div
          class="v-radio theme--light"
        >
          <div
            class="v-input--selection-controls__input"
          >
            <input
              aria-checked="false"
              aria-label="Average"
              name="aggregate_func"
              role="radio"
              type="radio"
              value="avg"
            />
            <div
              class="v-input--selection-controls__ripple"
            />
            <i
              aria-hidden="true"
              class="v-icon material-icons theme--light"
            >
              radio_button_unchecked
            </i>
          </div>
          <label
            aria-hidden="true"
            class="v-label theme--light"
            style="left: 0px; position: relative;"
          >
            Average
          </label>
        </div>
        <div
          class="v-radio theme--light"
        >
          <div
            class="v-input--selection-controls__input"
          >
            <input
              aria-checked="false"
              aria-label="Min"
              name="aggregate_func"
              role="radio"
              type="radio"
              value="min"
            />
            <div
              class="v-input--selection-controls__ripple"
            />
            <i
              aria-hidden="true"
              class="v-icon material-icons theme--light"
            >
              radio_button_unchecked
            </i>
          </div>
          <label
            aria-hidden="true"
            class="v-label theme--light"
            style="left: 0px; position: relative;"
          >
            Min
          </label>
        </div>
        <div
          class="v-radio theme--light"
        >
          <div
            class="v-input--selection-controls__input"
          >
            <input
              aria-checked="false"
              aria-label="Max"
              name="aggregate_func"
              role="radio"
              type="radio"
              value="max"
            />
            <div
              class="v-input--selection-controls__ripple"
            />
            <i
              aria-hidden="true"
              class="v-icon material-icons theme--light"
            >
              radio_button_unchecked
            </i>
          </div>
          <label
            aria-hidden="true"
            class="v-label theme--light"
            style="left: 0px; position: relative;"
          >
            Max
          </label>
        </div>
        <div
          class="v-radio theme--light"
        >
          <div
            class="v-input--selection-controls__input"
          >
            <input
              aria-checked="false"
              aria-label="Last"
              name="aggregate_func"
              role="radio"
              type="radio"
              value="last"
            />
            <div
              class="v-input--selection-controls__ripple"
            />
            <i
              aria-hidden="true"
              class="v-icon material-icons theme--light"
            >
              radio_button_unchecked
            </i>
          </div>
          <label
            aria-hidden="true"
            class="v-label theme--light"
            style="left: 0px; position: relative;"
          >
            Last
          </label>
        </div>
      </div>
    </div>
    <div
      class="v-messages theme--light"
    >
      <transition-group-stub
        class="v-messages__wrapper"
        name="message-transition"
        tag="div"
      />
    </div>
  </div>
</div>
`;
